# spellcast-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: board_keddah.txt  board_redeye.txt
scripts/: fetch_words.py
src/spellcast_solver/: __init__.py  board.py  cli.py  dictionary.py  solver.py  tiles.py  trie.py
tests/: test_board.py  test_solver.py  test_tiles.py  test_trie.py
