[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spellcast-solver"
version = "0.1.0"
description = "A trie-guided solver for the Discord SpellCast word game."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Christian Mattsson" }]
keywords = ["spellcast", "discord", "word-game", "solver", "trie"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
spellcast-solve = "spellcast_solver.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/spellcast_solver"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
